lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:34: error: type mismatch;
 found   : Unit
 required: Int
		if (getX()>=zone(1).x) {return 2}
                ^Lander:44: error: not found: value setPousseedesiree
setPousseedesiree(4)
^